Changed we made on the night

--- a/hybridvoter/src/pages/tabs/tabs.html
+++ b/hybridvoter/src/pages/tabs/tabs.html
@@ -2,7 +2,7 @@
 
    <ion-navbar no-border-bottom>
     <ion-title>
-      Hybrid Voter
+      Hybrid Voter Win
     </ion-title>
 
 <ion-buttons end>
@@ -40,6 +40,16 @@
     </ion-item>
 
   </ion-list>
+
+  <ion-fab right bottom *ngSwitchCase="'vote'" >
+    <button ion-fab color="light"><ion-icon name="arrow-dropleft"></ion-icon></button>
+    <ion-fab-list side="left">
+      <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
+      <button ion-fab><ion-icon name="logo-googleplus"></ion-icon></button>
+    </ion-fab-list>
+  </ion-fab>
 
   <ion-list *ngSwitchCase="'results'">
     <canvas baseChart chartType="doughnut" [data]="donutData" [labels]="donutLabels">
