--- a/hybridvoter/src/index.html
+++ b/hybridvoter/src/index.html
@@ -16,14 +16,14 @@
 
   <script src="assets/js/Chart.bundle.js"></script>
 
-  <!-- un-comment this code to enable service worker
+  <!-- un-comment this code to enable service worker -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
         .catch(err => console.log('Error', err));
     }
-  </script> -->
+  </script>
 
   <link href="build/main.css" rel="stylesheet">
 
